# ML-SECU2024

./: .gitignore  README.md  pyproject.toml
src/: preprocess_data.py
src/data_exploration/: DecisionTree.ipynb  LSTM.ipynb  MLP.ipynb  RandomForest.ipynb  XGBoost.ipynb  exploration.ipynb  fisch_exploration.ipynb  network.html  network.ipynb  physical.html  physical.ipynb  physical_test_exp_tom.ipynb  preprocess_data.py  rnud_exploration.ipynb  tom_exploration (fork fisch).ipynb
src/data_exploration/mlsecu/: anomaly_detection_use_case.py  data_exploration_utils.py  data_preparation_utils.py
