[tool.poetry]
name = "Final Project ML-SECU"
version = "0.1.0"
description = ""
authors = ["Arnaud Baradat <arnaud.baradat@epita.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
jupyter = "^1.0.0"
numpy = "^1.26.0"
pandas = "^2.1.1"
seaborn = "^0.13.0"
matplotlib = "^3.8.0"
ipykernel = "^6.25.2"
openpyxl = "^3.1.2"
spicy = "^0.16.0"
scikit-learn = "^1.3.1"
scipy = "^1.11.3"
tensorflow = "^2.14.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
